--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,4 +4,17 @@
 }
 body {
   font-size: 15px;
+  overflow: hidden;
+}
+::-webkit-scrollbar {
+  width: 4px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
 }
